pluginsdk_delphi/bridgemain.pas

  
Type
//Gui enums
GUIMSG = (
    GUI_DISASSEMBLE_AT,             // param1=(duint)va,            param2=(duint)cip
    GUI_SET_DEBUG_STATE,            // param1=(DBGSTATE)state,      param2=unused
    GUI_ADD_MSG_TO_LOG,             // param1=(const char*)msg,     param2=unused
    GUI_CLEAR_LOG,                  // param1=unused,               param2=unused
    GUI_UPDATE_REGISTER_VIEW,       // param1=unused,               param2=unused
    GUI_UPDATE_DISASSEMBLY_VIEW,    // param1=unused,               param2=unused
    GUI_UPDATE_BREAKPOINTS_VIEW,    // param1=unused,               param2=unused
    GUI_UPDATE_WINDOW_TITLE,        // param1=(const char*)file,    param2=unused
    GUI_GET_WINDOW_HANDLE,          // param1=unused,               param2=unused
    GUI_DUMP_AT,                    // param1=(duint)va             param2=unused
    GUI_SCRIPT_ADD,                 // param1=int count,            param2=const char** lines
    GUI_SCRIPT_CLEAR,               // param1=unused,               param2=unused
    GUI_SCRIPT_SETIP,               // param1=int line,             param2=unused
    GUI_SCRIPT_ERROR,               // param1=int line,             param2=const char* message
    GUI_SCRIPT_SETTITLE,            // param1=const char* title,    param2=unused
    GUI_SCRIPT_SETINFOLINE,         // param1=int line,             param2=const char* info
    GUI_SCRIPT_MESSAGE,             // param1=const char* message,  param2=unused
    GUI_SCRIPT_MSGYN,               // param1=const char* message,  param2=unused
    GUI_SYMBOL_LOG_ADD,             // param1(const char*)msg,      param2=unused
    GUI_SYMBOL_LOG_CLEAR,           // param1=unused,               param2=unused
    GUI_SYMBOL_SET_PROGRESS,        // param1=int percent           param2=unused
    GUI_SYMBOL_UPDATE_MODULE_LIST,  // param1=int count,            param2=SYMBOLMODULEINFO* modules
    GUI_REF_ADDCOLUMN,              // param1=int width,            param2=(const char*)title
    GUI_REF_SETROWCOUNT,            // param1=int rows,             param2=unused
    GUI_REF_GETROWCOUNT,            // param1=unused,               param2=unused
    GUI_REF_DELETEALLCOLUMNS,       // param1=unused,               param2=unused
    GUI_REF_SETCELLCONTENT,         // param1=(CELLINFO*)info,      param2=unused
    GUI_REF_GETCELLCONTENT,         // param1=int row,              param2=int col
    GUI_REF_RELOADDATA,             // param1=unused,               param2=unused
    GUI_REF_SETSINGLESELECTION,     // param1=int index,            param2=bool scroll
    GUI_REF_SETPROGRESS,            // param1=int progress,			param2=unused
    GUI_REF_SETSEARCHSTARTCOL,      // param1=int col               param2=unused
    GUI_STACK_DUMP_AT,              // param1=duint addr,           param2=duint csp
    GUI_UPDATE_DUMP_VIEW,           // param1=unused,               param2=unused
    GUI_UPDATE_THREAD_VIEW,         // param1=unused,               param2=unused
    GUI_ADD_RECENT_FILE,            // param1=(const char*)file,    param2=unused
    GUI_SET_LAST_EXCEPTION,         // param1=unsigned int code,    param2=unused
    GUI_GET_DISASSEMBLY,            // param1=duint addr,           param2=char* text
    GUI_MENU_ADD,                   // param1=int hMenu,            param2=const char* title
    GUI_MENU_ADD_ENTRY,             // param1=int hMenu,            param2=const char* title
    GUI_MENU_ADD_SEPARATOR,         // param1=int hMenu,            param2=unused
    GUI_MENU_CLEAR,                 // param1=int hMenu,            param2=unused
    GUI_SELECTION_GET,              // param1=int hWindow,          param2=SELECTIONDATA* selection
    GUI_SELECTION_SET,              // param1=int hWindow,          param2=const SELECTIONDATA* selection
    GUI_GETLINE_WINDOW              // param1=const char* title,    param2=char* text
);

//GUI structures
PCELLINFO = ^CELLINFO;
CELLINFO = packed record
    row,
    col: Integer;
    str: PAChar;
end;

PSELECTIONDATA = ^SELECTIONDATA;
SELECTIONDATA = packed record
    adrstart,
    adrend: duint;
end;

//GUI functions
{BRIDGE_IMPEXP void}    procedure GuiDisasmAt(addr: duint;cip: duint); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiSetDebugState(state: DBGSTATE); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiAddLogMessage(const msg: PAChar); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiLogClear(); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiUpdateAllViews(); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiUpdateRegisterView(); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiUpdateDisassemblyView(); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiUpdateBreakpointsView(); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiUpdateWindowTitle(const filename: PACHar); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP HWND}    function GuiGetWindowHandle(): HWND; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiDumpAt(va: duint); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiScriptAdd(count: Integer; const lines: PPAnsiChar); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiScriptClear(); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiScriptSetIp(line: Integer); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiScriptError(line: Integer; const szmessage: PAChar); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiScriptSetTitle(const title: PAChar); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiScriptSetInfoLine(line: integer; const info: PAChar); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiScriptMessage(const szmessage: PAChar); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP int}     function GuiScriptMsgyn(const szmessage: PAChar): integer; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiSymbolLogAdd(const szmessage: PAChar); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiSymbolLogClear(); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiSymbolSetProgress(percent: Integer); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiSymbolUpdateModuleList(count: integer;modules: PSYMBOLMODULEINFO); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiReferenceAddColumn(width: Integer; const title: PAChar); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiReferenceSetRowCount(count: Integer); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP int}     function GuiReferenceGetRowCount(): Integer; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiReferenceDeleteAllColumns(); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiReferenceSetCellContent(row: Integer;col: Integer; const st: PAChar); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP char*}   function GuiReferenceGetCellContent(row: Integer;col: Integer): PAChar; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiReferenceReloadData(); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiReferenceSetSingleSelection(index: Integer;scroll: Boolean); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiReferenceSetProgress(progress: Integer); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiReferenceSetSearchStartCol(col: Integer); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiStackDumpAt(addr: duint;csp: duint); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiUpdateDumpView(); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiUpdateThreadView(); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiAddRecentFile(const filename: PAChar); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiSetLastException(exception: LongWord); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function GuiGetDisassembly(addr: duint;text: PAChar): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP int}     function GuiMenuAdd(hMenu: Integer; const title: PAChar): Integer; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP int}     function GuiMenuAddEntry(hMenu: Integer; const title: PAChar): Integer; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiMenuAddSeparator(hMenu: Integer); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP void}    procedure GuiMenuClear(hMenu: Integer); cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function GuiSelectionGet(hWindow: Integer;selection: PSELECTIONDATA): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function GuiSelectionSet(hWindow: Integer;const selection: SELECTIONDATA): Boolean; cdecl; external x32_BRIDGE;
{BRIDGE_IMPEXP bool}    function GuiGetLineWindow(const title: PACHar;text: PAChar): Boolean; cdecl; external x32_BRIDGE;

implementation

initialization

end.
